[tool.poetry]
name = "test-langchain"
version = "0.1.0"
description = ""
authors = ["aRaiko.Funakami <raiko.funakami@access-company.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
langchain-openai = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
